--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -89,16 +89,45 @@ li a:hover {
 	text-decoration: none;
 	outline-color: #000000;
 	margin-right: 15px;
-/* 	background-image: url (C:\Users\Luke\git\LGrotte\LGrotte\war\besuchen.png);
- */	margin-left: 15px;
+	margin-left: 15px;
 	cursor: pointer;
 	cursor: hand;
-	/* -webkit-box-shadow: inset 0px 0px 3px 2px rgba(225,225,225,0.85);
+	-webkit-box-shadow: inset 0px 0px 3px 2px rgba(225,225,225,0.85);
 	-moz-box-shadow: inset 0px 0px 3px 2px rgba(225,225,225,0.85);
-	box-shadow: inset 0px 0px 3px 2px rgba(225,225,225,0.85); */
+	box-shadow: inset 0px 0px 3px 2px rgba(225,225,225,0.85);
 	border: 1px solid #8b8b8b;
 	border-radius: 1.5px;
 	-moz-border-radius: 1.5px;
+}
+
+.findLove-Button-img{
+	background-color: #FFF;
+	color: #000000;
+	font-size: small;
+	/* padding: 1px 3px 1px 3px; */
+	padding-left: 3px;
+	padding-right: 3px;
+	text-decoration: none;
+	outline-color: #000000;
+	margin-right: 15px;
+	margin-left: 15px;
+	cursor: pointer;
+	cursor: hand;
+	-webkit-box-shadow: inset 0px 0px 3px 2px rgba(225,225,225,0.85);
+	-moz-box-shadow: inset 0px 0px 3px 2px rgba(225,225,225,0.85);
+	box-shadow: inset 0px 0px 3px 2px rgba(225,225,225,0.85);
+	border: 1px solid #8b8b8b;
+	border-radius: 1.5px;
+	-moz-border-radius: 1.5px;
+}
+
+.findLove-Button-img:hover {
+	background: #e8e8e8;
+	color: #000;
+	-webkit-box-shadow: inset 0px 0px 5px 3px rgba(205,205,205,0.85);
+	-moz-box-shadow: inset 0px 0px 5px 3px rgba(205,205,205,0.85);
+	box-shadow: inset 0px 0px 5px 3px rgba(205,205,205,0.85);
+	text-decoration: none;
 }
 
 .findLove-Button:hover {
