--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -329,7 +329,6 @@ li a:hover {
 	height: 160px;
 	width: 200px;
 	margin-left: 60px;
- 	
 }
 
 .logo_grotte{
@@ -449,7 +448,14 @@ li a:hover {
 .gwt-TextBox{
 }
 
-.gwt-FlexTable{
+.gwt-DateBox{
+	width: 130px;
+	padding-left: 4px;
+	padding-right: 4px;
+	padding-top: 8.5px;
+	margin-top: 2px;
+	margin-bottom: 2px;
+	margin-right: 7px;
 }
 
 .gwt-ListBox{
@@ -460,11 +466,35 @@ li a:hover {
   	color: white !important;
 }
 
+.Profil-Anzeigen-Label{
+	width: 130px;
+	padding-right: 20px;
+	padding-top: 4px;
+	margin-bottom: 2px;
+	padding-left: 5px;
+	padding-bottom: 4px;
+	border-bottom: 1px solid #c0c0c0;
+	border-top: 1px solid #c0c0c0;
+}
 
-
-.Profilbearbeiten-Boxen{
+.Profilbearbeiten-Label{
 	height: 30px;
+	width: 140px;
+	padding-left: 4px;
+	padding-right: 4px;
 	padding-top: 8.5px;
+	margin-top: 2px;
+	margin-bottom: 2px;
+	margin-right: 7px;
+}
+
+.Profilbearbeiten-TextBox{
+	width: 130px;
+	height: 20px;
+	padding-left: 4px;
+	padding-right: 4px;
+	padding-top: 4px;
+	padding-bottom: 4px;
 	margin-top: 2px;
 	margin-bottom: 2px;
 	margin-right: 7px;
@@ -472,15 +502,29 @@ li a:hover {
 
 .Profilbearbeiten-ListBoxen{
 	height: 30px;
+	width: 142px;;
+	font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
 	padding-top: auto;
 	margin-top: 2px;
 	margin-bottom: 2px;
 	margin-right: 7px;
 }
 
+.Profilbearbeiten-ListBoxen option{
+	padding: 4px ;
+	background-color: #b61414 !important;
+	color: white !important;
+}
+
+.Profilbearbeiten-ListBoxen option:hover{
+	padding: 4px ;
+	background-color: red !important;
+	color: white !important;
+}
+
 .Profilbearbeiten-ListBoxen option:checked {
-  background-color: #b61414 !important;
-  color: white !important;
+  background-color: #FFF !important;
+  color: #b61414 !important;
 }
 
 .Margin-Bottom{
@@ -525,6 +569,7 @@ li a:hover {
 	background-color: #FFF;
 	padding: 20px 0px 20px 20px;
 	min-height: 300px;
+	min-width: 460px;
 	width: 47%;
 	border-rigth: 1px solid #808080;
 	-webkit-border-radius: 5px;
@@ -538,6 +583,7 @@ li a:hover {
 	padding: 75px 20px 20px 0px;
 	height: auto;
 	min-height: 300px;
+	min-width: 460px;
 	float: right;
 	width: 47%;
 	-webkit-border-radius: 5px;
