CSS gefixt Suchprofil funktioniert wieder

--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -306,7 +306,7 @@ li a:hover {
 
 
 .loeschen-ja:hover{
-	background-color: #ff5151;;
+	background-color: #ff5151;
 }
 
 .loeschen-nein:hover{
@@ -457,7 +457,7 @@ li a:hover {
 
 .gwt-ListBox{
 	height: 32px;
-	width: 142px;;
+	width: 142px;
 	font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
 	padding-top: auto;
 	margin-top: 2px;
@@ -509,7 +509,7 @@ li a:hover {
 
 .Suchprofi-List{
 	height: 30px;
-	width: 142px;;
+	width: 142px;
 	font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
 	padding-top: auto;
 	margin-top: 2px;
