--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -236,6 +236,11 @@ li a:hover {
 	margin-top: 20px;
 }
 
+.Eigenschaft-Border{
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	border-bottom: 1px solid #c0c0c0; 
+}
 
 .logout-ja{
 	background-color: #FFF;
@@ -432,7 +437,6 @@ li a:hover {
 	margin: 5px;
 	height: auto;
 	min-height: 250px;
-	/* min-width: 1200px; */
 	border: 1px solid white;
 	overflow: hidden;
 	-webkit-border-radius: 5px;
@@ -488,7 +492,7 @@ li a:hover {
 	margin-top: 2px;
 	margin-bottom: 2px;
 	margin-right: 7px;
-}
+} 
 
 .Profil-Anzeigen-Label{
 	width: 130px;
@@ -545,6 +549,10 @@ li a:hover {
 	margin-bottom: 20px;
 }
 
+.Margin-Top{
+	margin-top: 20px;
+}
+
 .Eigenschaften-Table{
 	
 }
@@ -585,7 +593,6 @@ li a:hover {
 	min-height: 300px;
 	min-width: 460px;
 	width: 47%;
-	border-rigth: 1px solid #808080;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
