--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -575,7 +575,8 @@ li a:hover {
 .Text-Box-Connector{
 	margin-left: 5px;
 	margin-right: 5px;
-	color: blue;
+	padding-top: 9.5px;
+	padding-bottom: 9.5px;
 }
 
 .Margin-Bottom{
